2013-08-21  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_dashboard_detail.php: Fixed some minor 
	issues (sizes, positions, padding) on items.

	* operation/projects/project_detail.php: Fixed graph sizes.

	* operation/companies/company_detail.php: Fixed title (h1 -> h2).

	* images/bubble.png: Smaller bubble background.

	* include/functions_graph.php: Fixed number of displayed items in 
	project graph, limited to 7 (previously was 12 and was unusable).

	* include/styles/integria.css: Several of changes trying to fight 
	back problems on big screens and mac bold problems.
	

2013-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/projects/task.php,
	  include/functions_tasks.php: Chaged the incidents
	  icon. Visual changes.

2013-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/index.php: Changed the name of some variables.
	Added the case 'user' to the ajax action.
	
	* mobile/include/ui.class.php: Added the function
	"bindMobileAutocomplete".
	
	* mobile/include/user.class.php: Added the function
	"ajax" to return the result of users searches.
	
	* mobile/include/javascript/jqm.autoComplete-1.5.2.js:
	Added file.
	
	* mobile/operation/home.php: Commented the global
	search temporarily.
	
	* mobile/operation/workorder.php,
	  mobile/operation/workorders.php: Added user
	  autocompletion on some text inputs.
	
2013-08-21  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/functions_html.php
	include/styles/flora/flora.tabs.css
	include/styles/flora/flora.css
	include/styles/flora/flora.theme.css
	include/styles/integria_tip.css
	include/styles/integria.css
	include/graphs/fgraph.php
	include/functions_workunits.php
	operation/projects/project_overview.php
	operation/projects/project_group_detail.php
	operation/projects/project.php
	operation/projects/role_user_global.php
	operation/projects/project_tree.php
	operation/projects/project_detail.php
	operation/side_menu.php